[project]
name = "unora-population-tracker"
version = "0.1.0"
description = "Headless Dark Ages client that logs in and records the online population to SQLite."
requires-python = ">=3.14"
dependencies = []

[project.scripts]
population-tracker = "population_tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/population_tracker"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
